# project

./: .gitignore  a.html  drawSQL-pgsql-export-2024-09-17.sql  drawSQL-pgsql-export-2024-09-20.sql  onedarker.json
estos/: next.config.mjs  package-lock.json  package.json
estos/Components/: delete.js  delete.module.css  drop.js  editmessage.js  editmessage.module.css  eye.js  main.js  newChat.js  scrollToBottom.js
estos/api/: api.js
estos/src/: constant.js  lib.js  middleware.js
estos/src/app/: 404.css  globals.css  layout.js  middleware.js  not-found.js  page.js  page.module.css  socket.js
estos/src/app/(auth)/: login.module.css
estos/src/app/(auth)/login/: page.js
estos/src/app/(auth)/signup/: page.js
estos/src/app/home/: layout.js  main.js  page.js  style.module.css
estos/src/app/message/: context.js  layout.js
estos/src/app/message/[[...chatid]]/: newChat.module.css  page.js  pagea.js  search.module.css  side.js  style.module.css
server/: Cargo.toml
server/src/: main.rs
server/src/db/: user.rs
server2/: package.json  query.sql  server.js
server2/db/: connection.js  db.js
server2/middleware/: authToken.js  jwt.js
server2/routes/: authenticate.js  messages.js  token.js
