[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.121"
tokio = { version = "1.32.2", features = ["full"] }
md5 = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.8.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
postgres = "0.19.8"
tokio-postgres = "0.7.11"
jsonwebtoken = {version="*"}